src/objects/sma__MAAJAXDebugLog__c.object
<CustomObject>
    <fields>
        <fullName>sma__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__GeocodeSuccessful__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Geocode Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__RequestParameters__c</fullName>
        <label>Request Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Geocode</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>MapAnything AJAX Resource Debug Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything AJAX Resource Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>